--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %}
 
-{% block content %}
-
-    <div class="container">
-        <h1>Hello, {{ name }}!</h1>
-    </div>
+<div class="container">
+  <h1>Hello, {{ name }}!</h1>
+  <p>How are you doing?</p>
+</div>
 
 {% endblock %}
